--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Exist_EmpleadosDepartamentos
+application.vendor=Migu
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,29 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Exist_EmpleadosDepartamentos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.commons-io-2.4.jar=lib/commons-io-2.4.jar
+file.reference.exist-optional.jar=lib/exist-optional.jar
+file.reference.exist.jar=lib/exist.jar
+file.reference.log4j-1.2.17.jar=lib/log4j-1.2.17.jar
+file.reference.ws-commons-util-1.0.2.jar=lib/ws-commons-util-1.0.2.jar
+file.reference.xml-apis-1.4.01.jar=lib/xml-apis-1.4.01.jar
+file.reference.xmldb.jar=lib/xmldb.jar
+file.reference.xmlrpc-client-3.1.3.jar=lib/xmlrpc-client-3.1.3.jar
+file.reference.xmlrpc-common-3.1.3.jar=lib/xmlrpc-common-3.1.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.exist-optional.jar}:\
+    ${file.reference.exist.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.ws-commons-util-1.0.2.jar}:\
+    ${file.reference.xml-apis-1.4.01.jar}:\
+    ${file.reference.xmldb.jar}:\
+    ${file.reference.xmlrpc-client-3.1.3.jar}:\
+    ${file.reference.xmlrpc-common-3.1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,4 +91,3 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
-test.src.dir=test
